# OpenCodeUI

./: .env.example  README.md  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  docker.md  package-lock.json  package.json
docker/: Caddyfile.gateway  Dockerfile.backend  Dockerfile.file-service
src/: index.css
src-file-service/: Cargo.toml
src-file-service/src/: archive.rs  auth.rs  config.rs  content.rs  error.rs  main.rs  mime.rs  pathing.rs  router.rs  state.rs  transfer.rs
src-fileserver/: server.mjs  streaming.mjs  streaming.test.mjs
src/api/: client.ts  file.test.ts  file.ts  gateway.test.ts  gateway.ts  http.ts  types.ts
src/components/: BottomPanel.tsx  FileExplorer.test.tsx  FileExplorer.tsx  GatewayPanel.test.tsx  GatewayPanel.tsx  PanelContainer.test.tsx  PanelContainer.tsx  RightPanel.tsx  file-text-editor.tsx
src/constants/: api.ts
src/features/chat/input/: InputFooter.tsx
src/features/chat/sidebar/: SessionChildrenSlot.tsx
src/features/message/parts/: ToolPartView.tsx
src/features/settings/components/: AboutSettings.tsx  AppearanceSettings.tsx
src/hooks/: useFileExplorer.test.tsx  useFileExplorer.ts  useGatewayAvailability.ts  useHorizontalSplitResize.ts
src/locales/en/: components.json  settings.json
src/locales/zh-CN/: components.json  settings.json
src/store/: layoutStore.test.ts  layoutStore.ts  updateStore.test.ts  updateStore.ts
src/types/api/: file.ts
src/utils/: downloadUtils.test.ts  downloadUtils.ts
