[package]
name = "opencodeui-fileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["http1", "json"] }
base64 = "0.22.1"
bytes = "1.11.0"
env_logger = "0.11.8"
futures-core = "0.3.32"
futures-util = "0.3.32"
log = { version = "0.4.29", features = ["release_max_level_info"] }
mimalloc = "0.1.48"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.23.0"
thiserror = "2.0.12"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["io"] }

[profile.release]
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }